syntax = "proto3";

option csharp_namespace = "EmulatorRC.API.Protos";

service DeviceService {
	rpc UploadScreens(stream DeviceScreen) returns (Ack);
	rpc GetTouchEvents (Syn) returns (stream TouchEvents);
}

message DeviceScreen {
	DeviceInfo device_info = 1;
	bytes image = 2;
}

message DeviceInfo {
  int32 width = 1;
  int32 height = 2;
  int32 orientation = 3;
}

message TouchEvents {
  int32 width = 1;
  int32 height = 2;
  int64 time = 3;
  repeated MotionEventR events = 4;
}

message MotionEventR {
  int32 action = 1;
  float x = 2;
  float y = 3;
  int64 time = 4;
}

message Ack {}
message Syn {}